# Laracna-Bot

./: CMakeLists.txt  README.md  diagram.drawio  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bt_interface.cpp  bt_interface.hpp  bt_test.cpp  cmd_interface.cpp  cmd_interface.hpp  config.hpp  config_loader.cpp  config_loader.hpp  console.c  data_manager.cpp  data_manager.hpp  idf_component.yml  laracna.cpp  laracna.hpp  leg_move_controller.cpp  leg_move_controller.hpp  main.cpp  move_manager.cpp  move_manager.hpp  servo_driver.cpp  servo_driver.hpp
main/cli/: cli.hpp
main/console/: console.c
main/include/: iot_servo.c  iot_servo.h
main/leg/: ik.cpp  leg_move_controller.cpp  leg_move_controller.hpp  servo_drive.cpp
main/movement/: ik.cpp  ik.hpp  leg_config.hpp  leg_move_controller.cpp  leg_move_controller.hpp  move_manager.cpp  move_manager.hpp  servo_driver.cpp  servo_driver.hpp  servo_driver2.cpp  servo_driver2.hpp
main/utils/: math_utils.hpp
partition/: config.txt
test/ik/: CMakeLists.txt  test_ik.cpp
